# burs-mu-backend

./: .gitignore  AGENTS.md  PROGRESS.md  README.md
.serena/: project.yml
backend/: .env.example  Cargo.toml  PROGRESS.md  README.md  db.sql  docker-compose.yml  openapi.yaml  test_all_endpoints.sh  todo.md
backend/.agents/skills/burs-eşleştirme-sistemi-api/references/: authentication.md
backend/.agents/skills/burs-eşleştirme-sistemi-api/references/operations/: delete-departments-name.md  post-match-run.md  post-register.md
backend/.agents/skills/burs-eşleştirme-sistemi-api/references/resources/: Donorlar.md
backend/.agents/skills/burs-eşleştirme-sistemi-api/references/schemas/Academic/: _index.md
backend/.agents/skills/burs-eşleştirme-sistemi-api/references/schemas/Application/: ApplicationStatus.md  _index.md
backend/.agents/skills/burs-eşleştirme-sistemi-api/references/schemas/Create/: _index.md
backend/.agents/skills/burs-eşleştirme-sistemi-api/references/schemas/Profile/: Profile.md  _index.md
backend/.agents/skills/burs-eşleştirme-sistemi-api/references/schemas/User/: _index.md
backend/migrations/: 001.sql  002.sql  002_enhanced_scoring_schema.sql
backend/src/: auth.rs  config.rs  engine.rs  handlers.rs  lib.rs  main.rs  matching.rs  models.rs  state.rs
backend/tests/: api_tests.rs
mobile/: AGENTS.md  KNOWN_BUGS.md  README.md  pubspec.yaml
mobile/.serena/: project.yml
mobile/lib/: app.dart  main.dart
mobile/linux/: CMakeLists.txt
mobile/tasks/: 01-core-setup.md  02-models.md  03-api-services.md  04-auth-flow.md  05-student-feature.md  (+4 more)
(+167 files in other folders)
